Addes a AST base class + build procedure + added better debug control mode and exception handling;

--- a/SIK.vcxproj
+++ b/SIK.vcxproj
@@ -100,7 +100,10 @@
   <ItemGroup>
     <ClCompile Include="SIK\argvparser.cpp" />
     <ClCompile Include="sik\main.cpp" />
+    <ClCompile Include="SIK\SIKAst.cpp" />
+    <ClCompile Include="SIK\SIKException.cpp" />
     <ClCompile Include="SIK\SIKLang.cpp" />
+    <ClCompile Include="SIK\SIKParser.cpp" />
     <ClCompile Include="SIK\SIKScript.cpp" />
     <ClCompile Include="sik\SIKTokens.cpp" />
     <ClCompile Include="sik\SIK_Lex.cpp" />
@@ -108,7 +111,10 @@
   <ItemGroup>
     <ClInclude Include="SETSIK.hpp" />
     <ClInclude Include="SIK\argvparser.hpp" />
+    <ClInclude Include="SIK\SIKAst.hpp" />
+    <ClInclude Include="SIK\SIKException.hpp" />
     <ClInclude Include="SIK\SIKLang.hpp" />
+    <ClInclude Include="SIK\SIKParser.hpp" />
     <ClInclude Include="SIK\SIKScript.hpp" />
     <ClInclude Include="sik\SIKAdd.hpp" />
     <ClInclude Include="sik\SIKTokens.hpp" />
