Added a plugin mechamism to load libs q dlls as SIK plugins dynamically

--- a/SIK.vcxproj
+++ b/SIK.vcxproj
@@ -117,25 +117,32 @@
     <ClCompile Include="sik\main.cpp" />
     <ClCompile Include="SIK\SIKAst.cpp" />
     <ClCompile Include="SIK\SIKException.cpp" />
+    <ClCompile Include="SIK\SIKExtension.cpp" />
     <ClCompile Include="SIK\SIKInstruct.cpp" />
     <ClCompile Include="SIK\SIKLang.cpp" />
     <ClCompile Include="SIK\SIKObj.cpp" />
     <ClCompile Include="SIK\SIKParser.cpp" />
+    <ClCompile Include="SIK\SIKPluginDetails.cpp" />
+    <ClCompile Include="SIK\SIKPluginManager.cpp" />
     <ClCompile Include="SIK\SIKScript.cpp" />
     <ClCompile Include="sik\SIKTokens.cpp" />
     <ClCompile Include="SIK\SIKVm.cpp" />
     <ClCompile Include="sik\SIK_Lex.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="SIK\SIKPluginManager.hpp" />
+    <ClInclude Include="SIK\SIKPluginDetails.hpp" />
     <ClInclude Include="SIK\SIKAnaCode.hpp" />
     <ClInclude Include="SIK\argvparser.hpp" />
     <ClInclude Include="SIK\SETSIK.hpp" />
     <ClInclude Include="SIK\SIKAst.hpp" />
     <ClInclude Include="SIK\SIKException.hpp" />
+    <ClInclude Include="SIK\SIKExtension.hpp" />
     <ClInclude Include="SIK\SIKInstruct.hpp" />
     <ClInclude Include="SIK\SIKLang.hpp" />
     <ClInclude Include="SIK\SIKObj.hpp" />
     <ClInclude Include="SIK\SIKParser.hpp" />
+    <ClInclude Include="SIK\SIKPlugin.hpp" />
     <ClInclude Include="SIK\SIKScript.hpp" />
     <ClInclude Include="sik\SIKAdd.hpp" />
     <ClInclude Include="sik\SIKTokens.hpp" />
