--- a/SIK/Plug/SIKPlug_Base_Win/SIKPlug_Base/SIKPlug_Base.vcxproj
+++ b/SIK/Plug/SIKPlug_Base_Win/SIKPlug_Base/SIKPlug_Base.vcxproj
@@ -151,10 +151,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="SIKAdd.hpp" />
+    <ClInclude Include="SIKInstruct.hpp" />
+    <ClInclude Include="SIKObj.hpp" />
     <ClInclude Include="SIKPlugin.hpp" />
     <ClInclude Include="SIKPlug_Math.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="SIKInstruct.cpp" />
+    <ClCompile Include="SIKObj.cpp" />
     <ClCompile Include="SIKPlug_Math.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
